= CHANGES

== Edge

- NEW Remove RightJS, Riot, Steak support (@ujifgc)

== 0.13.2 (May 9th 2016)

- FIX #1789 Relax Tilt version to allow Tilt 2 (>= 1.4.1, < 3) (@ujifgc)
- WARN #1989 Warn about coming behavior change (@ujifgc)
- NEW #1987 Generator now failes with invalid namespace (@ujifgc)
- NEW Remove many internal uses of ActiveSupport (@ujifgc)
- FIX #2007 Respect Regexp#names at the time of route search (@namusyaka)
- FIX #2004 Set default alt attribute for image_tag (@namusyaka)
- FIX #2008 Login button on the admin app now looks as expected (@namusyaka)
- FIX #2011 Update mongoid database configuration (@serradura)
- FIX Remove empty rows and cols from textarea tag (@ujifgc)
- FIX #2015 Update broken links in the README and docs (@mariozig)
- FIX #2023 Preserve `default_builder` set in configure_apps (@ujifgc)
- FIX #2025 Match plugin names with dashes in their names (@wikimatze)
- WARN Notice about removing ObjectSpace.classes and ObjectSpace.new_classes in 0.14 (@ujifgc)
- FIX #2027 Use Module#name instead of Module#to_s (@namusyaka)
- NEW Logger option :sanitize_encoding (@ujifgc)
- FIX #2006 load missing AR models before calling seeds.rb (@ujifgc)
- NEW #1921 Adds `--api` option for project generator (@ujifgc)
- NEW #2032 Adds new `config/initializers` folder loaded during boot (@ujifgc)
- FIX #2019 Removes deprecation warning for ActiveRecord (@wikimatze)

== 0.13.1 (January 17th 2016)

- FIX #1978 Enable reloading of custom dependencies (@markglenfletcher)
- FIX Remove use of ActiveSupport in tests (@ujifgc)
- FIX #1982 Support nested query for expanding path (@namusyaka)
- FIX #1994 Missing new line in mocha generator (@peter50216)
- FIX #1995 Invalid german dates (@ujifgc)
- FIX #1998 Only output a warning message if the spec task is invoked (@postmodern)
- FIX #2000 Fix mutex handling for Ruby 2.3 (@tyabe)

== 0.13.1.beta1 (October 18th 2015)

- FIX #1975 Improve routing memory usage and performance (@namusyaka)